<resources>
    <string name="app_name">PocketPass</string>
    <string name="app_title">Pocket Pass</string>
    <string name="title_home">Home</string>
    <string name="title_analysis">Analysis</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="password">Password</string>
    <string name="profile_button_description">profile button</string>
    <string name="add_password_button_description">add password button</string>
    <string name="profile">Profile</string>
    <string name="permission">Permission</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="support">Support</string>
    <string name="autofill">Autofill</string>
    <string name="sync">Sync</string>

    <string name="password_transition_name">password_%1$s</string>
    <string name="password_details_transaction">passwordToPasswordDetails</string>
    <string name="shared_element_transaction">shared_element_container</string>
    <string name="new_record_shared_transaction">new_record_transaction</string>


    <array name="category_name">
        <item>Others</item>
        <item>Arts</item>
        <item>Business</item>
        <item>Education</item>
        <item>Email</item>
        <item>Finance</item>
        <item>Games</item>
        <item>General</item>
        <item>Tools</item>
        <item>Shopping</item>
        <item>Social Media</item>

    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_text"><![CDATA[Pocket Pass is free and open source Android App. It is a highly secure app. It does not store your data in any where , it store only locally on your phone. It encrypt your password and then store to your device . It uses a very strong 64 bit encryption to encrypt your password. ]]></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="web_site_app_name">web site / app name</string>
    <string name="add_manually">Add Manually</string>
    <string name="generate_password">Generate Password</string>
    <string name="close_button">close button</string>
    <string name="dismiss">Dismiss</string>
    <string name="update_text">Update</string>
    <string name="profile_sub_des_text"><![CDATA[Add contact details to get new updates. And state up to date with new things.]]></string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="user_id">User id</string>
    <string name="url_hint">https://example.com</string>
    <string name="link">link</string>
    <string name="user_id_hint">abc@userid</string>
    <string name="tick_mark">tick mark</string>
    <string name="field">Field</string>
    <string name="select_field">select field</string>
    <string name="or">OR</string>
    <string name="write_a_note_hint">write a note</string>
    <string name="add_new_field">add new field</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="phone">Phone</string>
    <string name="email">email</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="not_found">Not Found! try another</string>
    <string name="secure_text">%1$ secure</string>
    <string name="country_code">%1$s</string>
    <string name="version_text">v1.0.2</string>
    <string name="license_text"><![CDATA[Attributions & License]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="github_link"><a href="https://github.com/IamDebashis/pocketpass">https://github.com/IamDebashis/pocketpass</a></string>
    <string name="github_profile">https://github.com/IamDebashis</string>
    <string name="linkedin_profile">https://www.linkedin.com/in/coder-debashis/</string>
    <string name="twitter_profile">https://twitter.com/debahalder9914</string>
    <string name="term_condition">By registering, you agree to PocketPass\'s <a href="https://pages.flycricket.io/pocket-pass/privacy.html">Privacy Policy</a> and <a href="https://pages.flycricket.io/pocket-pass-0/terms.html">Terms of Service</a> </string>
    <string name="otp_resend_text">after %1$d sec</string>
    <string name="phone_details_text">We have send an One Time Password in this number  %1$s.</string>
    <string name="made_in_india">Made with ❤ in India</string>
    <string name="back_alert_title">Change Number</string>
    <string name="supporting_text">Are you want to change the number ?</string>
    <string name="exit_app">Exit App</string>
    <string name="decline">no</string>
    <string name="accept">Yes</string>

</resources>