<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/profile_button_description"
                android:src="@drawable/ic_profile" />

            <TextView
                style="@style/tvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_settings" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/add_password_button_description"
                android:src="@drawable/ic_add" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingTop="20dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/profile_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingStart="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_arrow_right" />

                <TextView
                    style="@style/tvSubHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/profile" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/permission_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingStart="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_arrow_right" />

                <TextView
                    style="@style/tvSubHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/permission" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/sync_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingStart="20dp">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_sync"
                    style="@style/tvSubHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sync" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/autofill_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingStart="20dp">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_autofill"
                    style="@style/tvSubHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/autofill"

                    />
            </FrameLayout>


            <FrameLayout
                android:id="@+id/about_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingStart="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_arrow_right" />

                <TextView
                    style="@style/tvSubHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/about" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/feedback_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingStart="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_arrow_right" />

                <TextView
                    style="@style/tvSubHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/feedback" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/help_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingStart="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/ic_arrow_right" />

                <TextView
                    style="@style/tvSubHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/help" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        style="@style/tvSubHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Version" />

                    <TextView
                        style="@style/tvCaption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:text="1.0.0" />


                </LinearLayout>


            </FrameLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>