<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nide.pocketpass.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_newRecordFragment"
            app:destination="@id/newRecordFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_navigation_home_to_passwordDetailsFragment"
            app:destination="@id/passwordDetailsFragment"
            app:enterAnim="@anim/push_up_in"
            app:exitAnim="@anim/push_down_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/push_down_out" />
        <action
            android:id="@+id/action_navigation_home_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_analysis"
        android:name="com.nide.pocketpass.ui.analysis.AnalysisFragment"
        android:label="@string/title_analysis"
        tools:layout="@layout/fragment_analysis" >
        <action
            android:id="@+id/action_navigation_analysis_to_newRecordFragment"
            app:destination="@id/newRecordFragment" />
        <action
            android:id="@+id/action_navigation_analysis_to_passwordDetailsFragment"
            app:destination="@id/passwordDetailsFragment"
            app:enterAnim="@anim/push_up_in"
            app:exitAnim="@anim/push_down_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/push_down_out"/>
        <action
            android:id="@+id/action_navigation_analysis_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
            android:id="@+id/navigation_search"
        android:name="com.nide.pocketpass.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_passwordDetailsFragment"
            app:destination="@id/passwordDetailsFragment"
            app:enterAnim="@anim/push_up_in"
            app:exitAnim="@anim/push_down_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/push_down_out" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.nide.pocketpass.ui.settings.SettingFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_navigation_settings_to_newRecordFragment"
            app:destination="@id/newRecordFragment" />
        <action
            android:id="@+id/action_navigation_settings_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_navigation_settings_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_navigation_settings_to_supportFragment"
            app:destination="@id/supportFragment" />
    </fragment>
    <fragment
        android:id="@+id/newRecordFragment"
        android:name="com.nide.pocketpass.ui.newrecord.NewRecordFragment"
        android:label="NewRecordFragment" />
    <fragment
        android:id="@+id/passwordDetailsFragment"
        android:name="com.nide.pocketpass.ui.viewpassword.PasswordDetailsFragment"
        android:label="PasswordDetailsFragment" >
        <argument
            android:name="password_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_passwordDetailsFragment_to_updateFragment"
            app:destination="@id/updateFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.nide.pocketpass.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.nide.pocketpass.ui.update.UpdateFragment"
        android:label="UpdateFragment" >
        <argument
            android:name="passId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.nide.pocketpass.ui.about.AboutFragment"
        android:label="fragment_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/supportFragment"
        android:name="com.nide.pocketpass.ui.about.SupportFragment"
        android:label="fragment_support"
        tools:layout="@layout/fragment_support" />

    <!--   <action
           android:id="@+id/global_new_record_fragment"
           app:destination="@id/newRecordFragment"
           />
   -->
</navigation>